--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -7,6 +7,7 @@
       type="image/svg+xml"
       href="/src/assets/png/SearonBackground.png"
     />
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>세상의 여론을 담다, 세론</title>
   </head>
