--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>세상의 여론을 담다, 세론!</title>
+    <title>세상의 여론을 담다, 세론!!</title>
   </head>
   <body>
     <div id="root"></div>
